Fix height on ios mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -168,3 +168,9 @@ html {
 .link {
   @apply decoration-4 decoration-solid underline-offset-[3px] decoration-secondary underline;
 }
+
+@supports (-webkit-touch-callout: none) {
+  body {
+    min-height: -webkit-fill-available;
+  }
+}
